Add crud operations for advertisement comments, add address field on advertisement table
