# src/main/kotlin/com/suatzengin/data/request/adcomment/AdvertisementCommentRequest.kt
@@ -1,0 +1,8 @@
+package com.suatzengin.data.request.adcomment
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class AdvertisementCommentRequest(
+    val comment: String
+)
