# src/main/kotlin/com/suatzengin/data/response/Response.kt
@@ -3,7 +3,7 @@ package com.suatzengin.data.response
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class PostResponse(
+data class MessageResponse(
     val message: String,
     val status: Boolean
 )
