# src/main/kotlin/com/suatzengin/routes/adcomments/GetAdvertisementCommentsRoute.kt
@@ -1,6 +1,6 @@
-package com.suatzengin.routes.advertisement
+package com.suatzengin.routes.adcomments
 
-import com.suatzengin.data.advertisement.AdvertisementDao
+import com.suatzengin.data.adcomment.AdCommentDao
 import com.suatzengin.data.response.MessageResponse
 import io.ktor.http.*
 import io.ktor.server.application.*
@@ -9,13 +9,16 @@ import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import java.util.*
 
-fun Route.getAdvertisement(dao: AdvertisementDao) {
+fun Route.getAdvertisementComments(dao: AdCommentDao) {
     authenticate {
-        get("/advertisement/{id}") {
+        get("/advertisement/{id}/comments") {
             runCatching {
-                val id = call.parameters["id"]
-                val uuid = UUID.fromString(id)
-                val response = dao.getAdvertisementById(uuid).toResponseModel()
+                val advertisementId = call.parameters["id"]
+                val uuid = UUID.fromString(advertisementId)
+
+                val response = dao.getAdvertisementComments(advertisementId = uuid).map { adComment ->
+                    adComment.toResponseModel()
+                }
 
                 call.respond(
                     status = HttpStatusCode.OK,
